SourceCode/CareerButterflySystem/nginx_controller/ingress-resource.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: careerbutterfly-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "session-cookie"
    nginx.ingress.kubernetes.io/session-cookie-expires: "3600"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "3600"
    nginx.ingress.kubernetes.io/affinity-mode: persistent
    nginx.ingress.kubernetes.io/session-cookie-hash: sha1
    nginx.ingress.kubernetes.io/session-cookie-path: "/"
    cert-manager.io/issuer: letsencrypt-nginx
spec:
  tls:
    - hosts:
      - mycareerbutterfly.com
      secretName: letsencrypt-nginx
  rules:
    - host: mycareerbutterfly.com
      http:
        paths:
        - path: /()(.*)
          pathType: ImplementationSpecific
          backend:
            service:
              name: ui-service
              port:
                number: 8501
    - http:
        paths:
        - path: /sentiment(/|$)(.*)
          pathType: ImplementationSpecific
          backend:
            service:
              name: sentiment-service
              port:
                number: 8100
        - path: /cv_and_resume_generator(/|$)(.*)
          pathType: ImplementationSpecific
          backend:
            service:
              name: cv-and-resume-generator-service
              port:
                number: 8000
        - path: /learning_resource(/|$)(.*)
          pathType: ImplementationSpecific
          backend:
            service:
              name: learning-resource-service
              port:
                number: 8200
        - path: /job_recommender(/|$)(.*)
          pathType: ImplementationSpecific
          backend:
            service:
              name: job-recommender-service
              port:
                number: 4000
        - path: /ui(/|$)(.*)
          pathType: ImplementationSpecific
          backend:
            service:
              name: ui-service
              port:
                number: 8501
